[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indevolt-api"
version = "0.1.0"
description = "Python API client for Indevolt devices"
readme = "README.md"
authors = [
    {name = "xirtnl"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
keywords = ["indevolt", "api", "async", "aiohttp"]
dependencies = [
    "aiohttp>=3.9.0",
]

[tool.setuptools]
packages = ["indevolt_api"]

[tool.setuptools.package-data]
indevolt_api = ["py.typed"]
